docs(#172): add SRS user docs — module + lifecycle + walkthrough + CLI flags
- New pages: docs/modules/srs.md, docs/srs/lifecycle.md, docs/srs/walkthrough.md
- Wire `/modules/srs` into nav + modules sidebar; add `/srs/` sidebar section
- sf new: document `--srs-enable`, `--srs-backend`, `--srs-parent-page-input`, ingestion flags
- sf update: document `srs` module, `--srs-backend`, `--srs-parent-page-input`, `--notion-api-token`
- Guide > Updating Projects: add `srs` to --add-modules list + scripted enable/ingest recipes
- Skills > Tool Skills: note sf-tool-notion is the default SRS backend

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>